<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_bottom_margin"
    android:paddingStart="@dimen/activity_padding_left"
    android:paddingEnd="@dimen/activity_padding_right"
    tools:context=".BusBuyTicketBuyerDetailsE">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textStyle="bold" />
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_Name_TextInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey_100"
                        android:inputType="text"
                        android:textColorHighlight="@color/colorAccent" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_Name_TextInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey_100"
                        android:inputType="text"
                        android:textColorHighlight="@color/colorAccent"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nrc_TextInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nrc"
                    android:digits="@string/nrc_format"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey_100"
                        android:digits="@string/nrc_format"
                        android:inputType="text"
                        android:textColorHighlight="@color/colorAccent"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile_Number_TextInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey_100"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textColorHighlight="@color/colorAccent"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_address_TextInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/grey_100"
                        android:inputType="textEmailAddress"
                        android:textColorHighlight="@color/colorAccent"
                        android:backgroundTint="@android:color/transparent"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView_R"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="* Required fields."
                    android:textColor="@color/red_800"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Book"
                    app:backgroundTint="@color/colorAccent"


                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>