<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_padding_left"
    android:paddingEnd="@dimen/activity_padding_right"
    tools:context=".ResetPin">

>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textStyle="bold" />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_padding_left"
        android:paddingRight="@dimen/activity_padding_right"
        android:paddingTop="@dimen/activity_padding_top"
        android:paddingStart="@dimen/activity_padding_left"
        android:paddingEnd="@dimen/activity_padding_right"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_number_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number_required"
            app:counterMaxLength="10">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/colorAccent"
                android:background="@color/text_input_edit_text_background"
                android:inputType="phone"
                android:maxLength="10"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nrc_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nrc"

             >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="@color/colorAccent"
                android:background="@color/text_input_edit_text_background"
                android:inputType="text"
                android:digits="@string/nrc_format"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView_R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="* Required fields."
            android:textColor="@color/red_800"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonSubmitRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorAccent"
            android:text="Reset pin"
            />

    </LinearLayout>
    </LinearLayout>
</ScrollView>